--- a/styles.css
+++ b/styles.css
@@ -41,3 +41,17 @@ button{
     font-size: 24px;
     font-weight: bold;
 }
+
+.button1, .button2{
+    font-size: 28px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.button1{
+    background-color: black;
+    color:white;
+}
+
+.button2{
+    background-color: yellow;
+}
