--- a/styles.css
+++ b/styles.css
@@ -65,3 +65,20 @@ button{
     color: lightgray;
     font-size: 24px;
 }
+
+.exercise05 .styled{
+    background-color: yellow;
+    color: red;
+    font-size: 20px;
+    text-align: center;
+}
+
+.exercise05{
+    background-color: white;
+}
+
+.unstyled{
+    background-color: white;
+    color: black;
+    text-align: left;
+}
